test/ping-cloud/pingaccess/admin-ingress.yaml
# This defines the ingress for the pingaccess admin service

# NOTE: this is just for Beluga dev/testing purposes. PingCloud will not have one of these.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccess-admin-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
    # Possible fix for some 502 failures on admin assets and api requests.
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - pingaccess-admin${ENVIRONMENT}.${TENANT_DOMAIN}
  rules:
    - host: pingaccess-admin${ENVIRONMENT}.${TENANT_DOMAIN}
      http:
        paths:
          # This rule gives internal access to the pingaccess admin services.
          - path: /
            backend:
              serviceName: pingaccess-admin
              servicePort: 9000
